--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
   width: 90%;
   max-width: 34rem;
   position: relative;
+  box-shadow: 5px 11px 15px 11px rgba(0, 0, 0, 0.08);
 }
 
 .card__bg {
